eserciziotre quasi finito

--- a/index.html
+++ b/index.html
@@ -1,18 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Booleaner</title>
 </head>
+
 <body>
+    <section>
     <!--header-->
     <header>
-        <img class="logo" src="img/logo.svg" alt="headerlogo">
+        <!--logo-->
+        <div class="pattern">
+            <img class="logo" src="img/logo.svg" alt="headerlogo">
+        </div>
+        </header>
+        </section>
+
+        <section>
+        <!--main title-->
+        <main>
+            <div>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
+            <h3>Sritto da <span class="celeste">The Booleaner</span></h3>
+            <h5>il 10/10/2020 </h5>
+            <img src="img/tim-1.jpg" alt="phototim1">
+            <img src="img/tim-2.jpg" alt="phototim2">
+            <h6>1st Photo: John S. and James L. Night Foundation, by Scott Henrichsen</h6>
+            <br>
+            <h6>2nd Photo: Wikimedia, by Paul Clarke</h6>
+        </div>
+        <div>
+            <!--text-->
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat.</li>
+                <li>Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
+                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat.</li>
+            </ul>
+        </div>
+        <div>
+            <!--table-->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ispsum dolor</th>
+                        <th>Lorem ispsum dolor</th>
+                        <th>Lorem ispsum dolor</th>
+                    </tr>
+                </thead>
+                <!--table body-->
+                <tbody>
+                    <tr>
+                        <td>Lorem ispsum dolor</td>
+                        <td>Lorem ispsum dolor</td>
+                        <td>Lorem ispsum dolor sit amet. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ispsum dolor</td>
+                        <td>Lorem ispsum dolor</td>
+                        <td>Lorem ispsum dolor sit amet. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ispsum dolor</td>
+                        <td>Lorem ispsum dolor</td>
+                        <td>Lorem ispsum dolor sit amet. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <!--final paragraph-->
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+        </div>
+    </main>
+    </section> 
+
+    <section>
+        <!--images footer-->
+    <footer>
+        <p class="footer">Potrebbero interessarti</p>
+        <img src="img/monitor.jpg" alt="monitor">
+        <img src="img/graph.jpg" alt="graph">
+    </footer>
+    </section>
 
 
-    </header>
-    
 </body>
+
 </html>
