--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div>
             <!--text-->
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud <span class="highlighted">exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat.</li>
                 <li>Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
@@ -45,9 +45,9 @@
         <div>
             <!--table-->
             <table>
-                <thead>
+                <thead class="tableblue">
                     <tr>
-                        <th>Lorem ispsum dolor</th>
+                        <th><span class= "white"> Lorem ispsum dolor</span></th>
                         <th>Lorem ispsum dolor</th>
                         <th>Lorem ispsum dolor</th>
                     </tr>
@@ -74,7 +74,7 @@
         </div>
         <div>
             <!--final paragraph-->
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <span class= "highlighted"> illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto </span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
         </div>
     </main>
     </section> 
