--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <!--table-->
             <table>
                 <thead class="tableblue">
-                    <tr>
-                        <th><span class= "white"> Lorem ispsum dolor</span></th>
+                    <tr class="white">
+                        <th>Lorem ispsum dolor</th>
                         <th>Lorem ispsum dolor</th>
                         <th>Lorem ispsum dolor</th>
                     </tr>
@@ -82,9 +82,14 @@
     <section>
         <!--images footer-->
     <footer>
-        <p class="footer">Potrebbero interessarti</p>
-        <img src="img/monitor.jpg" alt="monitor">
-        <img src="img/graph.jpg" alt="graph">
+        <h4 class="footerwrite">Potrebbero interessarti</h4>
+        <div class="footerimg">
+        <h3 class="white">Lorem ipsum dolor</h3>
+        <br>
+      <div class="footerimg2">
+          <h3 class="white">Lorem ipsum dolor</h3>
+      </div>
+      
     </footer>
     </section>
 
