--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <main>
             <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
-            <h3>Sritto da <span class="celeste">The Booleaner</span></h3>
-            <h5>il 10/10/2020 </h5>
+            <h3><span class="grey">Sritto da </span><span class="celeste">The Booleaner</span></h3>
+            <h5 class="grey">il 10/10/2020 </h5>
             <img src="img/tim-1.jpg" alt="phototim1">
             <img src="img/tim-2.jpg" alt="phototim2">
             <h6>1st Photo: John S. and James L. Night Foundation, by Scott Henrichsen</h6>
@@ -54,7 +54,7 @@
                 </thead>
                 <!--table body-->
                 <tbody>
-                    <tr>
+                    <tr class="lightblue">
                         <td>Lorem ispsum dolor</td>
                         <td>Lorem ispsum dolor</td>
                         <td>Lorem ispsum dolor sit amet. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus harum.</td>
@@ -64,7 +64,7 @@
                         <td>Lorem ispsum dolor</td>
                         <td>Lorem ispsum dolor sit amet. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                     </tr>
-                    <tr>
+                    <tr class="lightblue">
                         <td>Lorem ispsum dolor</td>
                         <td>Lorem ispsum dolor</td>
                         <td>Lorem ispsum dolor sit amet. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia evenient expedita a quia modi. Totam saepe quibusdam natus harum.</td>
