--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--header-->
     <header>
         <!--logo-->
-        <div class="pattern">
+        <div class="container">
             <img class="logo" src="img/logo.svg" alt="headerlogo">
         </div>
         </header>
@@ -22,7 +22,7 @@
 
         <section>
         <!--main title-->
-        <main>
+        <main class="container">
             <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
             <h3><span class="grey">Sritto da </span><span class="celeste">The Booleaner</span></h3>
