--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main class="container">
             <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
-            <h3><span class="grey">Sritto da </span><span class="celeste">The Booleaner</span></h3>
+            <div><span class="grey">Scritto da </span><span class="celeste">The Booleaner</span></div>
             <h5 class="grey">il 10/10/2020 </h5>
             <img src="img/tim-1.jpg" alt="phototim1">
             <img src="img/tim-2.jpg" alt="phototim2">
