--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <main class="container">
             <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
-            <div><span class="grey">Scritto da </span><span class="celeste">The Booleaner</span></div>
-            <h5 class="grey">il 10/10/2020 </h5>
+            <div class="author"><span class="grey">Scritto da </span><span class="celeste">The Booleaner</span></div>
+            <div class="grey">il 10/10/2020 </div>
             <img src="img/tim-1.jpg" alt="phototim1">
             <img src="img/tim-2.jpg" alt="phototim2">
             <h6>1st Photo: John S. and James L. Night Foundation, by Scott Henrichsen</h6>
