--- a/index.html
+++ b/index.html
@@ -25,26 +25,31 @@
         <main class="container">
             <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners Lee</h1>
-            <div class="author"><span class="grey">Scritto da </span><span class="celeste">The Booleaner</span></div>
-            <div class="grey">il 10/10/2020 </div>
-            <img src="img/tim-1.jpg" alt="phototim1">
-            <img src="img/tim-2.jpg" alt="phototim2">
-            <h6>1st Photo: John S. and James L. Night Foundation, by Scott Henrichsen</h6>
-            <br>
-            <h6>2nd Photo: Wikimedia, by Paul Clarke</h6>
+             <div class="author"><span class="grey">Scritto da </span><span class="celeste">The Booleaner</span></div>
+             <div class="grey">il 10/10/2020 </div>
+
+             <div class="images">
+              <img src="img/tim-1.jpg" alt="phototim1">
+              <img src="img/tim-2.jpg" alt="phototim2">
+             </div>
+             <div>
+                <p>1st Photo: John S. and James L. Night Foundation, by Scott Henrichsen</p>
+                <p class="content">2nd Photo: Wikimedia, by Paul Clarke</p>
+             </div>
+            
         </div>
         <div>
             <!--text-->
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud <span class="highlighted">exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud <span class="highlighted">exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat.</li>
                 <li>Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
-                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat.</li>
+                <li class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat.</li>
             </ul>
         </div>
         <div>
             <!--table-->
-            <table>
+            <table class="margintab">
                 <thead class="tableblue">
                     <tr class="white">
                         <th>Lorem ispsum dolor</th>
@@ -74,7 +79,7 @@
         </div>
         <div>
             <!--final paragraph-->
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <span class= "highlighted"> illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto </span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed iam nonummy nibh euismob tincidunt ut laureet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quid nostrud exerci tatium ulliamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <span class= "highlighted"> illum dolore eu feugiat nulla facilisis at vero eros et accumsam et iusto </span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
         </div>
     </main>
     </section> 
